# Advent-Of-Code-2018

./: .gitignore  Benchmark.h  CMakeLists.txt  README.md  day1.cpp  day1.s  format.sh  main.cpp  run.py  template.cpp  year_gen.py
2015/: CMakeLists.txt  README.md  aoc2015.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp
2015/day1/: main.hs
2015/day2/: main.hs
2015_hs/: README.md
2015_hs/day2/: README.md  main.hs
2016/: .gitignore  CMakeLists.txt  README.md  aoc2016.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp
2016/scripts/: debug.sh  deploy.sh  run.sh
2016/src/: day1.c  days.h  main.c
2017/: CMakeLists.txt  README.md  aoc2017.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp
2018/: CMakeLists.txt  DayOne.hs  README.md  aoc2018.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp
2018/day1/: day1.cpp
2018/day10/: main.cpp
2018/day2/: main.cpp
2018/day3/: inputgen.py  makefile
2018/day6/: main.cpp
2018/day7/: main.cpp  makefile
2018/day8/: main.cpp
2018/inputs/: day3_big.txt
2018/template/: main.cpp
2018_OLD/: CMakeLists.txt  aoc2018.h  day10.cpp  day6.cpp
2019/: CMakeLists.txt  README.md  aoc2019.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp
cpp/: .clang-format  CMakeLists.txt  README.md
cpp/2015/: CMakeLists.txt  README.md  aoc2015.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp
cpp/2016/: README.md  aoc2016.h  day1.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day8.cpp  main.cpp
cpp/2017/: CMakeLists.txt  README.md  aoc2017.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  main.cpp
cpp/2018/: CMakeLists.txt  README.md  aoc2018.h  day1.cpp  day10.cpp  day12.cpp  day14.cpp  day17.cpp  day19.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp
day1/: DayOne.hs  day1.cpp  exe  hexe  makefile
day10/: exe  main.cpp
day2/: biginput.txt  exe  main.cpp  makefile
day3/: exe  gmon.out  main.cpp  makefile  out.txt
day4/: exe  main.cpp  makefile
day5/: exe  main.cpp
day6/: exe  main.cpp
day7/: exe  main.cpp
generator/: cmake.txt  main.txt  readme.txt  year_gen.py  year_genv2.py
other/: d2c.cpp  exe
scripts/: build.sh  format.sh  run.sh
utils/: benchmark.h  util.h
(+79 files in other folders)
